force-app/main/default/objects/PDPQuestionnaire__mdt/PDPQuestionnaire__mdt.object-meta.xml
<CustomObject>
    <description>Custom metadata for Questionnaire flow</description>
    <label>PDPQuestionnaire</label>
    <pluralLabel>PDPQuestionnaires</pluralLabel>
</CustomObject>