force-app/main/default/objects/PDPQuestionnaire__mdt/fields/Question_Answer__c.field-meta.xml
<CustomField>
    <fullName>Question_Answer__c</fullName>
    <label>Question_Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>