force-app/main/default/objects/PDPQuestionnaire__mdt/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Texas</fullName>
                <default>true</default>
                <label>Texas</label>
            </value>
            <value>
                <fullName>Philadelphia</fullName>
            </value>
            <value>
                <fullName>Florida</fullName>
            </value>
            <value>
                <fullName>Grodno</fullName>
            </value>
            <value>
                <fullName>Brest</fullName>
            </value>
            <value>
                <fullName>Gomel</fullName>
            </value>
            <value>
                <fullName>Burgundia</fullName>
            </value>
            <value>
                <fullName>Provence</fullName>
            </value>
            <value>
                <fullName>Shampan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>